# pynfse-nacional

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEBUG_SESSION_SUMMARY.md  DOLT_REMOTE.md  LICENSE  README.md  RELEASE_CHECKLIST.md  debug_api.py  manifest  mkdocs.yml  pyproject.toml  query_servicos.py
.agents/: settings.json
.agents/rules/: schema-fidelity.md  testing.md
.beads/: config.yaml  dolt-backup.json  metadata.json
.beads/memory/: .gitignore  knowledge-db.sh
.claude/: settings.json
.claude/hooks/: auto-recall.sh  memory-capture.sh  provision-memory.sh  recall.sh  subagent-wrapup.sh
.claude/hooks/memorysanitize/: go.mod  main.go
.claude/rules/: python.md
.codex/hooks/: auto-recall.sh  knowledge-db.sh  memory-capture.sh  provision-memory.sh  recall.sh  subagent-wrapup.sh
.github/workflows/: docs.yml  tests.yml
.lavra/: .gitattributes  .gitignore
.lavra/config/: codebase-profile.md  lavra.json  project-setup.md
.lavra/memory/: knowledge-db.sh  knowledge.jsonl  memory-sanitize.sh
.lavra/memory/memorysanitize/: main_test.go
docs/: architecture.md  conf.py  getting-started.md  index.md  llms.txt
docs/_static/: version-switcher.css
docs/_templates/: version-switcher.html
docs/api/: client.md  client.rst  exceptions.md  exceptions.rst  index.md  models.md  models.rst  overview.md  pdf-generator.md  pdf-generator.rst  utils.md  utils.rst  xml-builder.md  xml-builder.rst  xml-signer.md  xml-signer.rst
docs/appendix/: changelog.md  environment-matrix.md  error-codes.md  index.md  release-versioning.md  troubleshooting.md
docs/guides/: cancel.md  certificate-setup.md  danfse-pdf.md  first-emission.md  ibscbs.md  index.md  query.md  substitute.md
ronald/: DPS130260324271392400018500900000000000000316.xml  DPS130260324271392400018500900000000000000317.xml  DPS130260324271392400018500900000000000000318.xml  DPS13026034271392400018500900000000000000313.xml  DPS13026034271392400018500900000000000000314.xml  DPS13026034271392400018500900000000000000315.xml  debug_xml.py  download_nfse_pdfs.py  generate_pdfs_from_results.py  issue_nfse_from_csv.py  patients_sample.csv  patients_sample_results.csv  test_manual_xml.py  test_nfse.py  test_no_declaration.py  test_signed_manual.py  test_xml_only.py  v1.json
src/pynfse_nacional/: __init__.py  _canonical.py  client.py  constants.py  error_codes.py  error_messages.py  exceptions.py  homologacao.py  models.py  models_ibscbs.py  pdf_generator.py  regime_mapping.py  release.py  response_parsers.py  types.py  utils.py  xml_builder.py  xml_signer.py
tests/: README.md  _cert_credentials.py  conftest.py  test_client_integration.py  test_client_parametros.py  test_client_unit.py  test_docs_versioning.py  test_dps_xsd_compliance.py  test_exceptions.py  test_models.py  test_models_ibscbs.py  test_pdf_generator.py  test_regime_mapping.py  test_release.py  test_response_parsers.py  test_schema_rejection_guard.py  test_utils.py  test_version.py  test_xml_builder.py  test_xml_builder_ibscbs.py  test_xml_signer.py  test_xsd_fixture.py
tests/_helpers/: xsd.py
tests/fixtures/annexes/: anexo_a-municipio_ibge-paises_iso2-v1-00-snnfse-20251210.xlsx  anexo_b-nbs2-lista_servico_nacional-snnfse-v1-01-20260122.xlsx  anexo_c-indop_ibscbs-snnfse-v1-01-20260122.xlsx
tests/schema_fidelity/: _helpers.py  test_annex_pins.py  test_fetch_bounds.py  test_fresh_xsd.py  test_ibscbs_annex_sync.py  test_patch_xsd_is_typos_only.py  test_schema_version.py
util/: .gitignore  README.md  build_versioned_docs.py  debug_api.py  issue_nfse.py  issuer.example.ini  query_convenio.py
xsd_schemas/: tiposComplexos_v1.01.xsd  tiposSimples_v1.01.xsd
(+10 files in other folders)
