[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynfse-nacional"
version = "0.1.0"
description = "Python library for Brazilian NFSe Nacional (Padrao Nacional) API integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Roberto Mello", email = "roberto.mello@gmail.com" }
]
keywords = ["nfse", "nota-fiscal", "brazil", "fiscal", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "httpx>=0.25.0",
    "lxml>=5.0.0",
    "signxml>=3.2.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pdf = [
    "reportlab>=4.0.0",
    "qrcode[pil]>=7.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = [
    "pynfse-nacional[pdf,dev]",
]

[project.urls]
Homepage = "https://github.com/robmello/pynfse-nacional"
Repository = "https://github.com/robmello/pynfse-nacional"
Documentation = "https://github.com/robmello/pynfse-nacional#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pynfse_nacional"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
