[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynfse-nacional"
version = "0.5.0"
description = "Python library for Brazilian NFSe Nacional (Padrao Nacional) API integration"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Project Maintainer", email = "maintainer@example.invalid" }
]
keywords = ["nfse", "nota-fiscal", "brazil", "fiscal", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "httpx>=0.25.0",
    "lxml>=5.3.1",
    "signxml>=4.0.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pdf = [
    "reportlab>=4.0.0",
    "qrcode[pil]>=7.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = [
    "pynfse-nacional[pdf,dev]",
]

[project.urls]
Homepage = "https://robmello.github.io/pynfse-nacional/"
Repository = "https://github.com/robmello/pynfse-nacional"
Documentation = "https://robmello.github.io/pynfse-nacional/"

[project.scripts]
release = "pynfse_nacional.release:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pynfse_nacional"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=8.0.0",
]
